# cmd/api/posts.go
@@ -46,11 +46,13 @@ func (app *application) createPostHandler(w http.ResponseWriter, r *http.Request
 		return
 	}
 
+	user := getUserFromContext(r)
+
 	post := &store.Post{
 		Title:   payload.Title,
 		Content: payload.Content,
 		Tags:    payload.Tags,
-		UserID:  1, // TODO: get user id from authentication
+		UserID:  user.ID,
 	}
 
 	ctx := r.Context()
